@@ -19,12 +19,11 @@ echo ${TZ} >/etc/timezone
 if [ "$JVMX" = "true" ]; then
 	java_k8s_resource_opts="-Xmx${xmx}m -Xms${xms}m"
 else
-	java_k8s_resource_opts="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+	java_k8s_resource_opts="+UseContainerSupport"
 fi
 
 JAVA_OPTS="-Duser.timezone=$TZ -server 
         ${java_k8s_resource_opts} 
-        -XX:ActiveProcessorCount={{ k8s_jvm_active_processor_count }} 
 		-Djava.rmi.server.hostname=$HOSTNAME
 		-DserviceMate=$POD_IP 
 		{% if k8s_config_profiles_active_env == true %}-Dspring.profiles.active=${AppEnv:-qa} {% endif %} 
